# GPU-project

./: .gitignore  CMakeLists.txt  profiling.sh
CPU/: centroids.npy  cpu.ipynb  cpu2.ipynb  kmeans_training.ipynb  lbp.py  lbs.py  python_cpu_implementation.ipynb
data/: centroids.csv  image1_centroids.csv
notebook/: cpu.ipynb
src/: bench.cpp  main.cc  test.cu  test.cuh
src/bench/: bench.cc
src/cpu/: knn.cc  knn.hh  lbp.cc  lbp.hh  main.cc  pipeline.cc  pipeline.hh
src/lbp/: lbp.cu  lbp.cuh
src/misc/: build_lut.cc  build_lut.hh  histo_to_file.cc  histo_to_file.hh  image-load.cc  image-load.hh  load_kmeans.cc  load_kmeans.hh  reconstruct_image.cu  reconstruct_image.cuh
src/neighbors/: knn.cu  knn.cuh
src/pipeline/: pipeline.cc  pipeline.hh
src/test/: main.cc
